Hero background's position is fixed causing a parallax effect with the white divs in between background pic. Other background pictures not showing up.

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -22,6 +22,9 @@ html {
   margin-left: -180px;
   margin-top: 115px;
 }
+.menu {
+  position: fixed;
+}
 #full-logo:hover {
   background-color: transparent;
   color: #3273dc;
@@ -31,11 +34,18 @@ html {
   overflow: hidden;
 }
 .hero-background {
-  position: absolute;
   object-fit: cover;
   object-position: center center;
   width: 100%;
   height: 100%;
+  position: fixed;
+}
+#reinvent-ypurself {
+  position: relative;
+}
+
+#logo-menu {
+  position: fixed;
 }
 
 .navbar-item img {
@@ -43,6 +53,7 @@ html {
   width: 100%;
   padding: 20px;
   margin-left: 400px;
+  position: relative;
   /* margin-right: auto; */
 }
 body {
@@ -58,7 +69,7 @@ body {
   margin-top: 50px;
   margin-right: 100px;
   margin-left: -30px;
-  position: fixed;
+  position: relative;
 }
 
 .menu a {
@@ -78,14 +89,15 @@ body {
 }
 
 .column .is-11 {
-  background-clip: white;
+  background-clip: rgb(238, 24, 24);
 }
 .menu-list {
   position: fixed;
   margin-top: 220px;
 }
 .has-text-white {
-  color: #f0f0f0;
+  position: relative;
+  color: black;
   font-family: "hypatia-sans-pro", sans-serif;
   font-weight: 400;
   font-style: italic;
@@ -104,25 +116,25 @@ body {
 }
 
 .bg-img-1 {
-  /* background-image: url("../public/images/swiftly-homepage.gif"); */
+  /* background-image: url("swiftly-homepage.gif"); */
   min-height: 100%;
 }
 .bg-img-goth {
-  /* background-image: url("../public/images/goth.png"); */
+  /* background-image: url("goth.png"); */
   min-height: 100%;
 }
 .bg-img-prep {
-  /* background-image: url("../public/images/goth.png"); */
+  /* background-image: url("prep_white_bg.png"); */
   min-height: 100%;
 }
 
 .bg-img-kawaii {
-  /* background-image: url("../public/images/goth.png"); */
+  /* background-image: url("kawaii.jpeg"); */
   min-height: 100%;
 }
 
 .bg-img-last {
-  /* background-image: url("../public/images/goth.png"); */
+  /* background-image: url("last-home-page-swiftly-0.png"); */
   min-height: 100%;
 }
 
